--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -4,10 +4,14 @@
 
 
 body {
-  background-color: rgb(239, 239, 239);
+  /* background-color: rgb(239, 239, 239); */
+  background-color: #dcdcdc;
 }
 
 
 .mainBG {
-  background-image: url(../../public/bg1.jpeg);
+  background-image: url(../../public/bg2.jpeg);
+  background-size: cover;
+  background-position-x: -120px;
+  background-repeat: no-repeat
 }
