--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -11,7 +11,13 @@ body {
 
 .mainBG {
   background-image: url(../../public/bg2.jpeg);
+  /* background-size: cover; */
+  /* background-position-x: -120px; */
+  /* background-repeat: no-repeat; */
+
+  background-position: center center;
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position-x: -120px;
-  background-repeat: no-repeat
+  height: 100vh;
+  width: 100%;
 }
