--- a/app/ui/some/some.css
+++ b/app/ui/some/some.css
@@ -39,15 +39,28 @@
   transform: scale3d(.94, .94, 1.01);
 }
 
+/* .someBg { */
+  /* background-image: none; */
+/* } */
+
 .someBg {
-  background-image: none;
+  background-image: url(../../../public/bg2.jpeg);
+  /* background-size: cover; */
+  /* background-position-x: -120px; */
+  /* background-repeat: no-repeat; */
+
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
 }
 
-@media screen and (max-width: 525px) {
+/* @media screen and (max-width: 525px) {
   .someBg {
     background-image: url(../../../public/bg2.jpeg);
     background-size: cover;
     background-position-x: -120px;
     background-repeat: no-repeat
   }  
-} 
+}  */
