--- a/app/ui/navbar/navbar.css
+++ b/app/ui/navbar/navbar.css
@@ -1,7 +1,7 @@
 
 .navbar-links {
     box-shadow: inset 0 0 0 0 #e8e8e8;
-    color: #e8e8e8;
+    color: #032d61;
     padding: 0 .25rem;
     transition: color .4s ease-in-out, box-shadow .4s ease-in-out;
   }
@@ -11,3 +11,9 @@
     color: #032d61;
   }
   
+
+  @media screen and (min-width: 640px) {
+    .navbar-links {
+        color: #e8e8e8;
+    }
+  }
