--- a/app/ui/home/homeBtn.css
+++ b/app/ui/home/homeBtn.css
@@ -12,7 +12,7 @@
   display: inline-block;
   font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 20px;
 
   overflow: visible;
@@ -48,4 +48,13 @@
   .button-50 {
     padding: 12px 50px;
   }
+}
+
+.cardBg {
+  background: rgba(255, 255, 255, 0.07);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.4px);
+  -webkit-backdrop-filter: blur(5.4px);
+  border: 1px solid rgba(255, 255, 255, 0.04);
 }
