--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -10,10 +10,21 @@ body {
 
 
 .mainBG {
-  background-image: url(../../public/bg2.jpeg);
+  background-image: url(../../public/toppcph_31032024-24.jpg);
   /* background-size: cover; */
   /* background-position-x: -120px; */
   /* background-repeat: no-repeat; */
+
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+}
+
+.screen2Bg {
+  background-image: url(../../public/toppcph_31032024-01.jpg);
+
 
   background-position: center center;
   background-repeat: no-repeat;
