--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -24,10 +24,10 @@ body {
 
 .screen2Bg {
   background-image: url(../../public/toppcph_31032024-01.jpg);
-
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
   width: 100%;
+  min-height: 100vh;
+  padding: 2rem 0;
 }
